# cbd

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  ConwayBromageLib.cpp  ConwayBromageLib.h  Doxyfile  FileSorter.cpp  KmerListGenerator.cpp  Makefile  Performances.cpp  README.md  Tests.cpp  ecoli_count.txt  generate_counts.py  graph.py  graphsForIsPresent.py  involveGenerate_counts.py  main.cpp  pipeline.nf  sequencegen.py  sortACGT.txt  sortACTG.txt  sortKmer.nf  timetest.nf  todo
CBl/: ConwayBromageLib.cpp  ConwayBromageLib.h  README.md  Tests.cpp  Tests.h  main.cpp
ConwayBromageLib/: CBl  CMakeLists.txt  ConwayBromageLib.h  main.cpp
SDSL_tests/Alexandra/: main.cpp
SDSL_tests/Murat/: main.cpp  merge_concat.cpp
apps/: CMakeLists.txt  buildIndex.cpp  deserializertest.cpp  loadIndex.cpp  main.cpp  queryIndex.cpp  request.cpp  requestnext.cpp  serializer.cpp  test256.cpp
canonic_generation/: #README.md#  sortACTG.py
cbd/: .travis.yml  CMakeLists.txt  ConwayBromageDatastructure.cpp  ConwayBromageLib.cpp  ConwayBromageLib.h  FileSorter.cpp  Kmanip.cpp  Kmanip.h  Performances.cpp
cbd/canonic_generation/: README.md  involveGenerate_counts.py
cbd/old/: ConversionAndMerging.h  PreviousAndNext.cpp  PreviousAndNext.h
cbl/: Doxyfile  FileSorter.cpp  Makefile  chart.py  cmake_install.cmake  sortACTG.py
cbl/docs/: class_conway_bromage.html  class_kmer_manipulator.js  class_kmer_manipulator_a_c_t_g-members.html  class_kmer_manipulator_a_c_t_g.html  classes.html  hierarchy.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
cbl/old/: ConversionAndMerging.cpp
cbl/sample_generation/: generate_counts.py
doc/html/: _conway_bromage_lib_8cpp.html  _conway_bromage_lib_8cpp__incl.dot  _conway_bromage_lib_8h.html  _conway_bromage_lib_8h.js  _conway_bromage_lib_8h__dep__incl.dot  _conway_bromage_lib_8h__incl.dot  _conway_bromage_lib_8h_source.html  _file_sorter_8cpp.html  _file_sorter_8cpp.js  _file_sorter_8cpp__incl.dot  _kmer_list_generator_8cpp.html  _kmer_list_generator_8cpp.js  _kmer_list_generator_8cpp__incl.dot  _performances_8cpp.html  _performances_8cpp.js  _performances_8cpp__incl.dot  _r_e_a_d_m_e_8md.html  _tests_8cpp.html  _tests_8cpp.js  _tests_8cpp__incl.dot  annotated.html  chart_8py.html  chart_8py.js  class_conway_bromage-members.html  class_conway_bromage.html  class_kmer_manipulator-members.html  class_kmer_manipulator.html  class_kmer_manipulator__inherit__graph.dot  class_kmer_manipulator_a_c_g_t-members.html  class_kmer_manipulator_a_c_g_t.html  class_kmer_manipulator_a_c_g_t.js  class_kmer_manipulator_a_c_g_t__coll__graph.dot  class_kmer_manipulator_a_c_t_g-members.html  class_kmer_manipulator_a_c_t_g.html  class_kmer_manipulator_a_c_t_g__inherit__graph.dot  classes.html  files.html  files_dup.js  functions.html  functions_func.html  (+34 more)
doc/latex/: _conway_bromage_lib_8cpp.tex  _conway_bromage_lib_8cpp.tex.tmp  _conway_bromage_lib_8cpp__incl.dot  _conway_bromage_lib_8h.tex  _conway_bromage_lib_8h__dep__incl.dot  _conway_bromage_lib_8h__incl.dot  _file_sorter_8cpp.tex  _file_sorter_8cpp__incl.dot  _kmer_list_generator_8cpp.tex  _kmer_list_generator_8cpp__incl.dot  _performances_8cpp.tex  _performances_8cpp__incl.dot  _tests_8cpp.tex  _tests_8cpp__incl.dot  annotated.tex  chart_8py.tex  class_conway_bromage.tex  class_kmer_manipulator.eps  class_kmer_manipulator.tex  class_kmer_manipulator__inherit__graph.dot  class_kmer_manipulator_a_c_g_t.eps  class_kmer_manipulator_a_c_g_t.tex  class_kmer_manipulator_a_c_g_t__coll__graph.dot  class_kmer_manipulator_a_c_t_g.eps  class_kmer_manipulator_a_c_t_g.tex  class_kmer_manipulator_a_c_t_g__inherit__graph.dot  files.tex  (+13 more)
docs/: _conway_bromage_lib_8h_source.html  annotated.html  annotated_dup.js  class_conway_bromage.html  class_conway_bromage.js  class_kmer_manipulator.html  class_kmer_manipulator_a_c_g_t-members.html  class_kmer_manipulator_a_c_g_t.html  class_kmer_manipulator_a_c_t_g.js  functions.html  functions_func.html  hierarchy.js  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js
old/: fromFileToSdVectoVariations.cpp  fromFileToSdVectorVariations.h
python_script/: generate_counts.py  graphsForIsPresent.py  test
sample_generation/: README.md
tests/: CMakeLists.txt  Tests.cpp  serializeTest.cpp  unittests.cpp
(+81 files in other folders)
